--- a/Code/app/src/main/res/layout/activity_requests.xml
+++ b/Code/app/src/main/res/layout/activity_requests.xml
@@ -9,23 +9,24 @@
 
     <Button
         android:id="@+id/Reject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="46dp"
-        android:layout_marginRight="46dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="8dp"
         android:text="Reject" />
 
     <Button
         android:id="@+id/returnButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:onClick="ReturnButton"
         android:text="@string/return_to_mood_history" />
 
@@ -49,14 +50,14 @@
 
     <Button
         android:id="@+id/Accept"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="8dp"
         android:text="Accept" />
 
 </RelativeLayout>
