--- a/Code/app/src/main/res/layout/activity_usermap.xml
+++ b/Code/app/src/main/res/layout/activity_usermap.xml
@@ -9,10 +9,11 @@
     <Button
         android:id="@+id/returnButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:onClick="ReturnButton"
         android:text="@string/return_to_mood_history"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,11 +21,11 @@
 
     <Button
         android:id="@+id/otherButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:onClick="OthersButton"
         android:text="Other's"
         app:layout_constraintEnd_toEndOf="parent"
