--- a/Code/app/src/main/res/layout/activity_view_map.xml
+++ b/Code/app/src/main/res/layout/activity_view_map.xml
@@ -16,10 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top">
+
         <Button
             android:id="@+id/CancelLocationButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:onClick="BackButton"
             android:text="Back" />
 
