--- a/Code/app/src/main/res/layout/activity_view_mood.xml
+++ b/Code/app/src/main/res/layout/activity_view_mood.xml
@@ -14,9 +14,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:onClick="ReturnButton"
-        android:text="@string/return_to_mood_history"
+        android:text="Return to Community"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,7 +67,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Date: "
+        android:text="Time:"
         app:layout_constraintEnd_toStartOf="@+id/timeView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateView1" />
@@ -96,7 +95,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Date: "
+        android:text="Social Situation:"
         app:layout_constraintEnd_toStartOf="@+id/socialView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reasonView1" />
@@ -124,7 +123,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Date: "
+        android:text="Reason:"
         app:layout_constraintEnd_toStartOf="@+id/reasonView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeView1" />
@@ -157,7 +156,7 @@
 
     <Button
         android:id="@+id/viewLocation"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
