--- a/Code/app/src/main/res/layout/activity_community.xml
+++ b/Code/app/src/main/res/layout/activity_community.xml
@@ -23,7 +23,7 @@
     <ListView
         android:id="@+id/followactivity_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/followButton"
